trunk/tests/jastadd/negative/name_errors/L1/2_MultipleDeclarations3.ob
MODULE TestModule;
	VAR a, a : INTEGER;
END TestModule.
